# geek-rust

./: .gitignore  Cargo.toml  README.md
_012_type_system/: Cargo.toml
_012_type_system/src/: constant.rs  id.rs  infer_type.rs  reader.rs  writer.rs
_01_stack_heap/: Cargo.toml
_01_stack_heap/src/: error.rs  pointer.rs  string.rs
_02_concepts/: Cargo.toml
_02_concepts/src/: shape.rs
_02_concepts_/: Cargo.toml
_03_grammar/: Cargo.toml
_03_grammar_concepts/: Cargo.toml
_03_grammar_concepts/src/: event.rs  fib.rs  function.rs
_03_grammar_scrape_url/: Cargo.toml
_03_grammar_scrape_url/examples/: handle_errors.rs  use_args.rs
_03_grammar_scrape_url/src/: main.rs
_04_httpie/: Cargo.toml
_04_httpie/examples/: cli.rs  cli_from_str.rs  cli_get.rs  cli_verify.rs
_04_httpie/src/: main.rs
_05_thumbor/: Cargo.toml  abi.proto  build.rs
_05_thumbor/src/: imageproc.rs  main.rs  server2.rs
_05_thumbor/src/engine/: mod.rs  photon.rs
_05_thumbor/src/pb/: abi.rs  mod.rs
_07_ownership/: Cargo.toml
_07_ownership/src/: check_copy.rs  ownership.rs  ownership_error.rs
_08_borrow/: Cargo.toml
_08_borrow/src/: demo1.rs  demo2.rs  demo3.rs  demo4.rs  demo5.rs  demo6.rs  heap_reference_stack.rs  heap_reference_stack_outlive.rs  local_ref.rs  ownership_reference.rs  reborrow.rs
_09_multi_owner/: Cargo.toml
_09_multi_owner/src/: dag.rs  dag_mut.rs  main.rs  refcell.rs
_10_lifetime/: Cargo.toml
_10_lifetime/examples/: lifetime1.rs  lifetime2.rs  longest.rs  struct_lifetime.rs
_10_lifetime/src/: lifetime.rs  lifetime2.rs  lifetime_mono.rs  lifetime_non_lexical.rs  short_lifetime.rs  strtok.rs
_11_memory/: Cargo.toml
_11_memory/examples/: alignment.rs  raii.rs
_12_type_system/: Cargo.toml
_12_type_system/examples/: cast_type.rs
_12_type_system/src/: constant.rs  id.rs  reader.rs  writer.rs
_13_traits/: Cargo.toml
_13_traits/src/: animal.rs  complex.rs  dd.rs  formatter.rs  parse.rs  parse1.rs  parse2.rs  trait_object.rs  trait_object_internal.rs  write.rs
_14_sys_traits/: Cargo.toml
_14_sys_traits/src/: copy_drop.rs  developer.rs  sized.rs
_15_smart_pointers/: Cargo.toml
_15_smart_pointers/src/: main.rs
_16_data_structure/: Cargo.toml
_16_data_structure/examples/: boxed.rs  slice1.rs  slice2.rs  slice3.rs  slice4.rs  slice5.rs  type_name.rs
_17_hash_table/: Cargo.toml
_17_hash_table/examples/: hashmap1.rs
_18_error_handling/: Cargo.toml
_19_closure/: Cargo.toml
_19_closure/examples/: closure1.rs
_19_closure/src/: main.rs
_20_protobuf/: Cargo.toml  build.rs
_20_protobuf/protos/: voting.proto  voting.rs
_20_protobuf/src/: main.rs
_21_kv_server/: Cargo.toml  build.rs
_21_kv_server/examples/: client.rs  dummy_server.rs
_21_kv_server/src/: error.rs  lib.rs
_21_kv_server/src/pb/: mod.rs
_21_kv_server/src/service/: mod.rs
_21_kv_server/src/storage/: memory.rs  mod.rs
_23_advanced_generics/: Cargo.toml
_29_network/: Cargo.toml
_29_network/examples/: p2p_chat.rs
_38_async/: Cargo.toml
_39_async_internals/: Cargo.toml
_50_prost/: Cargo.toml
leetcode/src/: _0001_two_sum.rs  _0003_longest_substring_without_repeating_characters.rs  _0011_max_area.rs  _0015_three_sum.rs  _0042_trapping_rain_water.rs  _0049_group_anagrams.rs  _0128_longest_consecutive.rs  _0283_move_zeroes.rs  _0438_find_all_anagrams_in_a_string.rs  _0721_accounts_merge.rs  _0807_max_increase_keeping_skyline.rs  _2972_incremovable_subarray_count.rs  _2974_minimum_number_game.rs  _3011_fin_if_array_can_be_sorted.rs  lib.rs
too_many_web_servers/: Cargo.toml
too_many_web_servers/src/: simple.rs
