[package]
name = "_012_type_system"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "infer_type"
path = "src/infer_type.rs"

[[bin]]
name = "constant"
path = "src/constant.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "id"
path = "src/id.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
