[package]
name = "_04_httpie"
version = "0.1.0"
edition = "2021"

[[example]]
name = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" #错误处理
clap = { version = "3.1.0", features = ["derive"] } # 命令行解析
colored = "2" # 命令行终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式 化
mime = "0.3" # 处理mime类型
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
serde = "0.5.0"