[package]
name = "_10_lifetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lifetime"
path = "src/lifetime.rs"


[[bin]]
name = "short_lifetime"
path = "src/short_lifetime.rs"

[[bin]]
name = "lifetime2"
path = "src/lifetime2.rs"

[[bin]]
name = "lifetime_mono"
path = "src/lifetime_mono.rs"

[[bin]]
name = "lifetime_non_lexical"
path = "src/lifetime_non_lexical.rs"


[[bin]]
name = "strtok"
path = "src/strtok.rs"

[dependencies]
