[package]
name = "_14_sys_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "developer"
path = "src/developer.rs"


[[bin]]
name = "copy_drop"
path = "src/copy_drop.rs"


[[bin]]
name = "sized"
path = "src/sized.rs"


[dependencies]
