[package]
name = "_20_protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
prost = "0.11.0"
tokio = {version = "1.21.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.8.0"