[package]
name = "_29_network"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
anyhow = "1"
bytes = "1"
futures = "0.3"
libp2p = { version = "0.39", features = ["tcp-tokio"] }
