[package]
name = "_38_async"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
futures = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.6", features = ["codec"] }
toml = "0.5"

#[[example]]
#bin  = "sync_io"
#path = "src/bin/sync_io.rs"